--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,eclipse,java
+SpringMVC_01/.project
+SpringMVC_01/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
