--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,6 @@ $RECYCLE.BIN/
 SpringMVC_01/.project
 SpringMVC_01/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
+SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
+SpringMVC_01/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
