--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom
 SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
 SpringMVC_01/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 SpringMVC_01/target/m2e-wtp/web-resources/META-INF/maven/kr.board/controller/pom.properties
+*.properties
